<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/RelativeLayout1" android:background="#ff000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/LinearLayout2" android:background="@drawable/andi" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <TextView android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_dev_status" />
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andi" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout1" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="27.0sp" android:textColor="#ffffffff" android:id="@id/button1" android:background="@drawable/andi" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/template3_scan_now" android:onClick="onScanNow" />
        <TextView android:id="@id/tv_imai" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="imei" style="@style/template3_bold" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/LinearLayout1" android:layout_below="@id/LinearLayout2" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/andi" style="@style/template3_img" />
                <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_malware" style="@style/template3_bold" />
                <TextView android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_clean" style="@style/template3_green" />
                <ProgressBar android:id="@id/progressBar1" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/andi" />
            </LinearLayout>
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:scaleType="fitXY" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/andi" style="@style/template3_img" />
                <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_root_status" style="@style/template3_bold" />
                <TextView android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_protected" style="@style/template3_green" />
            </LinearLayout>
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:scaleType="fitXY" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/andi" style="@style/template3_img" />
                <TextView android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_os" style="@style/template3_bold" />
                <TextView android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_uptodate" style="@style/template3_gray" />
            </LinearLayout>
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:scaleType="fitXY" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/andi" style="@style/template3_img" />
                <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_wifi" style="@style/template3_bold" />
                <TextView android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_androidap" style="@style/template3_green" />
            </LinearLayout>
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:scaleType="fitXY" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/andi" style="@style/template3_img" />
                <TextView android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_trusteer" style="@style/template3_bold" />
                <TextView android:id="@id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template3_trusteer_ver" style="@style/template3_gray" />
            </LinearLayout>
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:scaleType="fitXY" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>