<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andi" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="30.0sp" android:textStyle="bold" android:textColor="#ff003a74" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template4_certificaat" />
        <LinearLayout android:background="@drawable/andi" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout android:background="#ffe7e7e7" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la1" android:background="@drawable/andi" android:padding="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <EditText android:id="@id/editText1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/template4_invoeren" android:ems="10" android:inputType="textPassword" />
            <EditText android:id="@id/editText2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/template4_bevestigen" android:ems="10" android:inputType="textPassword" />
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/button1" android:background="@drawable/andi" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template4_genereer" android:onClick="template4_click" />
            <ProgressBar android:id="@id/progressBar1" android:padding="10.0dip" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="100.0dip" android:indeterminateDrawable="@drawable/andi" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la2" android:background="@drawable/andi" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <LinearLayout android:orientation="vertical" android:background="@drawable/andi" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="27.0sp" android:textColor="#ffffffff" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template4_uw" />
                <TextView android:textSize="30.0sp" android:gravity="center_vertical" android:id="@id/textView4" android:background="@drawable/andi" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/template4_code" />
            </LinearLayout>
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="21.0sp" android:gravity="center_horizontal" android:id="@id/textView3" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template4_deze" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/imageView2" android:paddingBottom="17.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:src="@drawable/andi" />
                <TextView android:textSize="16.0sp" android:id="@id/textView5" android:paddingBottom="17.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template4_about" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>