<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/andi" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andi" />
        <LinearLayout android:gravity="center" android:background="@drawable/andi" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="30.0sp" android:textStyle="bold" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_certificaat" style="@style/template6_bold" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:background="@drawable/andi" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la1" android:background="@drawable/andi" android:padding="20.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <EditText android:id="@id/editText1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/template6_invoeren" android:ems="10" android:inputType="textPassword" />
            <EditText android:id="@id/editText2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/template6_bevestigen" android:ems="10" android:inputType="textPassword" />
            <TextView android:textSize="18.0sp" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_first" />
            <Button android:textSize="17.0sp" android:textColor="#ff000000" android:id="@id/button1" android:background="@drawable/andi" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/template6_genereer" android:onClick="template6_click" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/ll_loading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ProgressBar android:id="@id/progressBar1" android:padding="10.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/andi" />
                <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_loading" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la2" android:background="@drawable/andi" android:padding="0.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
                <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andi" />
                    <TextView android:textSize="27.0sp" android:textColor="#ff000000" android:id="@id/textView2" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_uw" android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="30.0sp" android:gravity="center_horizontal" android:id="@id/textView4" android:background="#ffeaaa1f" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/template6_code" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="20.0sp" android:gravity="left" android:id="@id/textView3" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_deze" />
            <RelativeLayout android:gravity="center_vertical" android:id="@id/RelativeLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="10.0dip">
                <TextView android:textSize="14.0sp" android:gravity="right" android:id="@id/textView5" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template6_about" android:layout_toLeftOf="@id/imageView2" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andi" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>