<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:background="@drawable/andi" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/andi" android:adjustViewBounds="true" />
    </LinearLayout>
    <ScrollView android:layout_gravity="center_vertical" android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la1" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template34_trasted" />
                <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template34_steps" />
                <Button android:textSize="21.0sp" android:textColor="#ffffffff" android:id="@id/button1" android:background="@drawable/andi" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="template34_click" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/la2" android:padding="1.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="left" android:id="@id/textView5" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template34_kunt_gebruik" />
                <TextView android:textSize="22.0sp" android:textColor="#ff000000" android:gravity="left" android:id="@id/textView3" android:padding="7.0dip" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template34_Persoonlijke" />
                <TextView android:textSize="32.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/textView4" android:background="@drawable/andi" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/template34_code" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView android:gravity="center_horizontal" android:id="@id/textView6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/template34_copyight" android:singleLine="true" />
</LinearLayout>